Bug 499525 - Application window receives focus for a moment, causing flickering, when cursor moves between Global Menu items
Summary: Application window receives focus for a moment, causing flickering, when curs...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Menu widget (other bugs)
Version First Reported In: 6.2.5
Platform: Manjaro Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 500029 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-04 23:06 UTC by masaq
Modified: 2025-03-01 18:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description masaq 2025-02-04 23:06:59 UTC
SUMMARY
With a global menu widget enabled, moving the mouse between lists gives the application window focus for a split second. This results in an irritating blinking in many applications, for example Dolphin's current selection or the command line cursor in Konsole or Kate.

STEPS TO REPRODUCE
1. Have a global menu widget.
2. Have a window open that visually reacts to focus loss.
3. Move between menu lists.
 
OBSERVED RESULT
The window receives focus from the global menu widget for a split second about nine out of ten times the cursor passes a list's boundary.

EXPECTED RESULT
Focus remains on the global menu widget until the menu is closed.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-1-MANJARO (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840HS w/ Radeon 780M Graphics
Memory: 30,7 GiB of RAM
Graphics Processor: AMD Radeon 780M
Manufacturer: Framework
Product Name: Laptop 16 (AMD Ryzen 7040 Series)
System Version: AG
Comment 1 John Kizer 2025-02-11 20:43:43 UTC
Hi - thanks for your bug report! I can reproduce this on a KDE Neon VM with Plasma 6.3.0.
Comment 2 Bug Janitor Service 2025-02-18 22:27:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5223
Comment 3 Nate Graham 2025-02-19 23:25:20 UTC
*** Bug 500029 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2025-03-01 18:26:57 UTC
Git commit d402f0cb307218971d322bcd54ec998f32f75b62 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 01/03/2025 at 16:52.
Pushed by ngraham into branch 'master'.

Use a single QMenu when switching between Global Menus

Otherwise, there will be focus flickering when we switch
from one option to another.

M  +26   -38   applets/appmenu/lib/appmenuapplet.cpp
M  +1    -0    applets/appmenu/lib/appmenuapplet.h
M  +1    -1    applets/appmenu/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/d402f0cb307218971d322bcd54ec998f32f75b62