Use a single QMenu when switching between Global Menus

Otherwise, there will be focus flickering when we switch
from one option to another.

BUG:499525